@@ -663,7 +663,11 @@ void darshan_shutdown(int timing_flag)
     return;
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_open(MPI_Comm comm, const char *filename, int amode, MPI_Info info, MPI_File *fh) 
+#else
 int MPI_File_open(MPI_Comm comm, char *filename, int amode, MPI_Info info, MPI_File *fh) 
+#endif
 {
     int ret;
     struct darshan_file_runtime* file;
@@ -767,8 +771,13 @@ int MPI_File_sync(MPI_File fh)
 }
 
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_set_view(MPI_File fh, MPI_Offset disp, MPI_Datatype etype, 
+    MPI_Datatype filetype, const char *datarep, MPI_Info info)
+#else
 int MPI_File_set_view(MPI_File fh, MPI_Offset disp, MPI_Datatype etype, 
     MPI_Datatype filetype, char *datarep, MPI_Info info)
+#endif
 {
     int ret;
     struct darshan_file_runtime* file;
@@ -983,8 +992,13 @@ int MPI_File_iread_shared(MPI_File fh, void * buf, int count,
 }
 
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write(MPI_File fh, const void *buf, int count, 
+    MPI_Datatype datatype, MPI_Status *status)
+#else
 int MPI_File_write(MPI_File fh, void *buf, int count, 
     MPI_Datatype datatype, MPI_Status *status)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -998,8 +1012,13 @@ int MPI_File_write(MPI_File fh, void *buf, int count,
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_at(MPI_File fh, MPI_Offset offset, const void *buf,
+    int count, MPI_Datatype datatype, MPI_Status *status)
+#else
 int MPI_File_write_at(MPI_File fh, MPI_Offset offset, void *buf,
     int count, MPI_Datatype datatype, MPI_Status *status)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1014,8 +1033,13 @@ int MPI_File_write_at(MPI_File fh, MPI_Offset offset, void *buf,
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_at_all(MPI_File fh, MPI_Offset offset, const void * buf,
+    int count, MPI_Datatype datatype, MPI_Status * status)
+#else
 int MPI_File_write_at_all(MPI_File fh, MPI_Offset offset, void * buf,
     int count, MPI_Datatype datatype, MPI_Status * status)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1030,7 +1054,11 @@ int MPI_File_write_at_all(MPI_File fh, MPI_Offset offset, void * buf,
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_all(MPI_File fh, const void * buf, int count, MPI_Datatype datatype, MPI_Status *status)
+#else
 int MPI_File_write_all(MPI_File fh, void * buf, int count, MPI_Datatype datatype, MPI_Status *status)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1045,7 +1073,11 @@ int MPI_File_write_all(MPI_File fh, void * buf, int count, MPI_Datatype datatype
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_shared(MPI_File fh, const void * buf, int count, MPI_Datatype datatype, MPI_Status *status)
+#else
 int MPI_File_write_shared(MPI_File fh, void * buf, int count, MPI_Datatype datatype, MPI_Status *status)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1060,8 +1092,13 @@ int MPI_File_write_shared(MPI_File fh, void * buf, int count, MPI_Datatype datat
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_ordered(MPI_File fh, const void * buf, int count, 
+    MPI_Datatype datatype, MPI_Status * status)
+#else
 int MPI_File_write_ordered(MPI_File fh, void * buf, int count, 
     MPI_Datatype datatype, MPI_Status * status)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1076,8 +1113,13 @@ int MPI_File_write_ordered(MPI_File fh, void * buf, int count,
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_at_all_begin(MPI_File fh, MPI_Offset offset, const void * buf,
+    int count, MPI_Datatype datatype)
+#else
 int MPI_File_write_at_all_begin(MPI_File fh, MPI_Offset offset, void * buf,
     int count, MPI_Datatype datatype)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1092,7 +1134,11 @@ int MPI_File_write_at_all_begin(MPI_File fh, MPI_Offset offset, void * buf,
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_all_begin(MPI_File fh, const void * buf, int count, MPI_Datatype datatype)
+#else
 int MPI_File_write_all_begin(MPI_File fh, void * buf, int count, MPI_Datatype datatype)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1106,7 +1152,11 @@ int MPI_File_write_all_begin(MPI_File fh, void * buf, int count, MPI_Datatype da
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_write_ordered_begin(MPI_File fh, const void * buf, int count, MPI_Datatype datatype)
+#else
 int MPI_File_write_ordered_begin(MPI_File fh, void * buf, int count, MPI_Datatype datatype)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1121,8 +1171,13 @@ int MPI_File_write_ordered_begin(MPI_File fh, void * buf, int count, MPI_Datatyp
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_iwrite_at(MPI_File fh, MPI_Offset offset, const void * buf,
+    int count, MPI_Datatype datatype, __D_MPI_REQUEST *request)
+#else
 int MPI_File_iwrite_at(MPI_File fh, MPI_Offset offset, void * buf,
     int count, MPI_Datatype datatype, __D_MPI_REQUEST *request)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1137,7 +1192,11 @@ int MPI_File_iwrite_at(MPI_File fh, MPI_Offset offset, void * buf,
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_iwrite(MPI_File fh, const void * buf, int count, MPI_Datatype datatype, __D_MPI_REQUEST * request)
+#else
 int MPI_File_iwrite(MPI_File fh, void * buf, int count, MPI_Datatype datatype, __D_MPI_REQUEST * request)
+#endif
 {
     int ret;
     double tm1, tm2;
@@ -1151,8 +1210,13 @@ int MPI_File_iwrite(MPI_File fh, void * buf, int count, MPI_Datatype datatype, _
     return(ret);
 }
 
+#ifdef HAVE_MPIIO_CONST
+int MPI_File_iwrite_shared(MPI_File fh, const void * buf, int count,
+    MPI_Datatype datatype, __D_MPI_REQUEST * request)
+#else
 int MPI_File_iwrite_shared(MPI_File fh, void * buf, int count,
     MPI_Datatype datatype, __D_MPI_REQUEST * request)
+#endif
 {
     int ret;
     double tm1, tm2;
